syntax = "proto3";

import "authservice.proto";
import "userservice.proto";
import "modelservice.proto";
import "approximationservice.proto";
import "google/protobuf/empty.proto";

option go_package = "./api";
package protos;

service ApiService {
    // Auth Service
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
    
    // User Service
    rpc ChangeUserPrivilege(ChangePrivilegeRequest) returns (google.protobuf.Empty) {}
    rpc CompareCredentials(CompareCredentialsRequest) returns (google.protobuf.Empty) {}
    rpc CreateUser(NewUserRequest) returns (UserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
    rpc GetAllUsers(google.protobuf.Empty) returns (GetUsersResponse) {}
    rpc SearchForUsers(SearchRequest) returns (SearchResponse) {}

    // Model Service
    rpc AddModel(NewModelRequest) returns (NewModelResponse) {}
    rpc DeleteModel(DeleteModelRequest) returns (google.protobuf.Empty) {}
    rpc GetUserModels(GetModelsRequest) returns (GetModelsResponse) {}

    // Approx Service
    rpc FitCurves(CurveFitRequest) returns (CurveFitResult) {}
}
